3 Mart 1. Ders Sonu

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "emre@emre.com",
+    "Issuer": "emre@emre.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkey745015mysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
